; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-packet.c_cutoff_mode.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-packet.c_cutoff_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.packet_fixture = type { %struct.TYPE_12__*, %struct.TYPE_11__, %struct.TYPE_13__ }
%struct.TYPE_12__ = type { %struct.TYPE_9__, i32 }
%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_11__ = type { %struct.TYPE_10__ }
%struct.TYPE_10__ = type { i64 }
%struct.TYPE_13__ = type { i64 }
%struct.ptunit_result = type { i32 }

@ppt_mode = common dso_local global i32 0, align 4
@pte_eos = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.packet_fixture*, i32)* @cutoff_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cutoff_mode(%struct.packet_fixture* %0, i32 %1) #0 {
  %3 = alloca %struct.ptunit_result, align 4
  %4 = alloca %struct.packet_fixture*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.packet_fixture* %0, %struct.packet_fixture** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* @ppt_mode, align 4
  %8 = load %struct.packet_fixture*, %struct.packet_fixture** %4, align 8
  %9 = getelementptr inbounds %struct.packet_fixture, %struct.packet_fixture* %8, i32 0, i32 0
  %10 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %10, i64 0
  %12 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %11, i32 0, i32 1
  store i32 %7, i32* %12, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.packet_fixture*, %struct.packet_fixture** %4, align 8
  %15 = getelementptr inbounds %struct.packet_fixture, %struct.packet_fixture* %14, i32 0, i32 0
  %16 = load %struct.TYPE_12__*, %struct.TYPE_12__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %16, i64 0
  %18 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 0
  store i32 %13, i32* %20, align 4
  %21 = load %struct.packet_fixture*, %struct.packet_fixture** %4, align 8
  %22 = getelementptr inbounds %struct.packet_fixture, %struct.packet_fixture* %21, i32 0, i32 2
  %23 = load %struct.packet_fixture*, %struct.packet_fixture** %4, align 8
  %24 = getelementptr inbounds %struct.packet_fixture, %struct.packet_fixture* %23, i32 0, i32 0
  %25 = load %struct.TYPE_12__*, %struct.TYPE_12__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %25, i64 0
  %27 = call i32 @pt_enc_next(%struct.TYPE_13__* %22, %struct.TYPE_12__* %26)
  store i32 %27, i32* %6, align 4
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @ptu_int_gt(i32 %28, i32 0)
  %30 = load %struct.packet_fixture*, %struct.packet_fixture** %4, align 8
  %31 = getelementptr inbounds %struct.packet_fixture, %struct.packet_fixture* %30, i32 0, i32 2
  %32 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = sub nsw i64 %33, 1
  %35 = load %struct.packet_fixture*, %struct.packet_fixture** %4, align 8
  %36 = getelementptr inbounds %struct.packet_fixture, %struct.packet_fixture* %35, i32 0, i32 1
  %37 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %37, i32 0, i32 0
  store i64 %34, i64* %38, align 8
  %39 = load %struct.packet_fixture*, %struct.packet_fixture** %4, align 8
  %40 = getelementptr inbounds %struct.packet_fixture, %struct.packet_fixture* %39, i32 0, i32 1
  %41 = load %struct.packet_fixture*, %struct.packet_fixture** %4, align 8
  %42 = getelementptr inbounds %struct.packet_fixture, %struct.packet_fixture* %41, i32 0, i32 0
  %43 = load %struct.TYPE_12__*, %struct.TYPE_12__** %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %43, i64 1
  %45 = call i32 @pt_pkt_next(%struct.TYPE_11__* %40, %struct.TYPE_12__* %44, i32 8)
  store i32 %45, i32* %6, align 4
  %46 = load i32, i32* %6, align 4
  %47 = load i32, i32* @pte_eos, align 4
  %48 = sub nsw i32 0, %47
  %49 = call i32 @ptu_int_eq(i32 %46, i32 %48)
  %50 = call i32 (...) @ptu_passed()
  %51 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %3, i32 0, i32 0
  store i32 %50, i32* %51, align 4
  %52 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %3, i32 0, i32 0
  %53 = load i32, i32* %52, align 4
  ret i32 %53
}

declare dso_local i32 @pt_enc_next(%struct.TYPE_13__*, %struct.TYPE_12__*) #1

declare dso_local i32 @ptu_int_gt(i32, i32) #1

declare dso_local i32 @pt_pkt_next(%struct.TYPE_11__*, %struct.TYPE_12__*, i32) #1

declare dso_local i32 @ptu_int_eq(i32, i32) #1

declare dso_local i32 @ptu_passed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
